# dante

./: .gitignore  .gitmodules  README.md
assets/: .gitignore  README.md
assets/config/: entities.cfg  game.cfg  game_assets.cfg  global.cfg  maps.cfg  title_assets.cfg  zone_1.cfg  zone_2.cfg
assets/posix/: refresh_assets.sh
assets/shaders/: shader_001_frag.fsh  shader_001_frag.hlsl  shader_001_vert.hlsl  shader_001_vert.vsh  shader_002_frag.fsh  shader_002_frag.hlsl  shader_003_frag.fsh  shader_003_frag.hlsl  shader_003_vert.hlsl  shader_003_vert.vsh  shader_004_frag.fsh  shader_004_frag.hlsl  shader_004_vert.hlsl  shader_005_frag.fsh  shader_005_frag.hlsl
assets/source/: texture_000.psd  texture_001.psd  texture_002.psd  texture_003.psd  texture_004.psd  texture_005.psd  texture_006.psd  texture_007.psd  texture_008.psd
assets/textures/: assets.cfg  game_assets.cfg  title_assets.cfg
assets/windows/: refresh_assets.bat
src/core/framework/entity/: DefaultController.cpp  DefaultController.h  DefaultEntityController.cpp  DefaultEntityController.h  Entity.cpp  Entity.h  EntityController.cpp  EntityController.h  EntityIDManager.cpp  EntityIDManager.h  EntityLayout.cpp  EntityLayout.h  EntityLayoutMapper.cpp  EntityLayoutMapper.h  EntityManager.cpp  EntityManager.h  EntityMapper.cpp  EntityMapper.h  EntityNetworkController.cpp  EntityNetworkController.h  EntityRegistry.cpp  EntityRegistry.h  GridLockedPhysicalEntity.cpp  GridLockedPhysicalEntity.h  GridManager.cpp  GridManager.h  PhysicalEntity.cpp  PhysicalEntity.h
src/core/framework/input/: CursorConverter.cpp  CursorConverter.h  CursorEvent.cpp  CursorEvent.h  CursorEventType.h  CursorInputManager.cpp  CursorInputManager.h  GamePadEvent.cpp  GamePadEvent.h  GamePadEventType.h  GamePadInputManager.cpp  GamePadInputManager.h  KeyboardEvent.cpp  KeyboardEvent.h  KeyboardInputManager.cpp  KeyboardInputManager.h  KeyboardLookup.h
src/core/framework/math/: Circle.cpp  Circle.h  Color.cpp  Color.h  Line.cpp  Line.h  MathUtil.h  NGRect.cpp  NGRect.h  OverlapTester.cpp  OverlapTester.h  Triangle.cpp  Triangle.h  Vector2.cpp  Vector2.h  Vector2D.cpp  Vector2D.h  Vector3.cpp  Vector3.h
src/core/framework/state/: StateMachine.h
src/core/framework/studio/: StudioEngine.cpp  StudioEngine.h  StudioInputManager.cpp  StudioInputManager.h  StudioRenderer.cpp  StudioRenderer.h  World.cpp  World.h  WorldRenderer.cpp  WorldRenderer.h
src/core/framework/tools/: XOREncryptDecrypt.c  encrypt_shaders_win32.bat  encrypt_textures_and_shaders.sh  encrypt_textures_win32.bat
src/core/framework/ui/: Assets.h  IAssetsMapper.cpp  IScreen.cpp  Renderer.cpp  Renderer.h  Text.cpp  Text.h
src/core/framework/util/: Config.cpp  Config.h  Constants.h  ContainerUtil.h  Engine.cpp  Engine.h  Extension.cpp  FPSUtil.cpp  FPSUtil.h  FlagUtil.h  FrameworkConstants.h  HashMap.h  IEngine.cpp  IEngine.h  InstanceManager.cpp  InstanceManager.h  MathUtil.h  NGExtension.cpp  NGExtension.h  NGPool.h  NGRTTI.cpp  NGRTTI.h  NGRollingPool.h  NGSTDUtil.h  PlatformHelper.h  Pool.h  RTTI.cpp  RTTI.h  State.h  StateMachine.h  StepTimer.h  StringUtil.cpp  StringUtil.h  Timing.cpp  Timing.h  Vector.h  WeightedTimedMovingAverage.cpp  WeightedTimedMovingAverage.h  macros.h  nullptr_emulation.h
src/core/game/config/: GameConfig.cpp  MainEngineController.cpp
src/core/game/entity/: BasicFollowAndAttackController.cpp  BasicFollowAndAttackController.h  DestructibleController.cpp  DestructibleController.h  PlayerController.cpp  PlayerController.h
src/core/game/game/: GameEngine.cpp  GameEngine.h  GameInputManager.cpp  GameInputManager.h  GameInputState.cpp  GameInputState.h  GameRenderer.cpp  GameRenderer.h  MainInputState.cpp  MainInputState.h  Server.cpp  Server.h  Util.cpp  Util.h
src/core/game/graphics/: GameRenderer.cpp  GameRenderer.h  StudioRenderer.cpp  StudioRenderer.h  TitleRenderer.cpp  TitleRenderer.h
src/core/game/logic/: BasicFollowAndAttackController.cpp  BasicFollowAndAttackController.h  Crate.cpp  Crate.h  CrawlerController.cpp  CrawlerController.h  DestructibleController.cpp  GameConfig.cpp  GameConfig.h  GameConstants.h  GameEngine.cpp  GameEngine.h  GameInputManager.cpp  GameInputManager.h  Ground.cpp  Ground.h  InputManager.cpp  InputManager.h  InputState.cpp  InputState.h  InstanceManager.cpp  InstanceManager.h  MainEngine.cpp  MainEngine.h  MainEngineController.cpp  MainEngineController.h  MainEngineState.cpp  MainEngineState.h  MainInputState.cpp  MainInputState.h  PlayerController.cpp  PlayerController.h  PooledObjectsManager.cpp  PooledObjectsManager.h  Projectile.cpp  Projectile.h  RoboCat.cpp  RoboCat.h  Robot.cpp  Robot.h  (+20 more)
src/core/game/network/: DanteClient.cpp  DanteClient.h  DanteServer.cpp  DanteServer.h  InputManager.cpp  InputManager.h  InputState.cpp  InputState.h  InstanceManager.cpp  InstanceManager.h  MainInputState.cpp  MainInputState.h  P2PAuth.cpp  P2PAuth.h  RemoteStorage.cpp  RemoteStorage.h  Server.cpp  Server.h  ServerBrowser.cpp  SpaceWar.h  (+4 more)
src/platform/android/: build.gradle  keystore.jks
src/platform/android/app/: CMakeCache.txt  CMakeLists.txt  Makefile  build.gradle  cmake_install.cmake  proguard-rules.pro
src/platform/android/app/src/main/: AndroidManifest.xml
src/platform/android/app/src/main/assets/: .gitignore
src/platform/android/app/src/main/cpp/: main.cpp  native-lib.cpp  pch.h
src/platform/android/app/src/main/java/com/noctisgames/dante/: MainNativeActivity.java  Test.java
src/platform/android/app/src/main/jni/: Android.mk  Application.mk  MainNativeActivity.cpp  pch.h
src/platform/android/app/src/main/res/values/: strings.xml
src/platform/linux/: .gitignore  README.md  dante.cbp  dante.depend  dante.layout  run_dante.sh
src/platform/server/: .gitignore  main.cpp  pch.h
src/platform/windows/: .gitignore  Dante.sln  Dante.vcxproj  Dante.vcxproj.filters  DeviceResources.cpp  Main.cpp  pch.h  resource.rc
tools/: XOREncryptDecrypt  XOREncryptDecryptLinux  encrypt_shaders_win32.bat  encrypt_textures_and_shaders.bat  encrypt_textures_and_shaders.sh  encrypt_textures_win32.bat
(+884 files in other folders)
